@@ -29,7 +29,7 @@ repository.type   = git
 [CheckChangeLog]
 
 [Prereqs]
-Moose = 0.94
+Moose = 1.9900
 
 [Prereqs / TestRequires]
 Test::Fatal = 0
